--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -51,6 +51,12 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @include media-breakpoint-down(md) {
+    width: 100%;
+    position: static !important;
+    transform: none;
+  }
 }
 
 .pd-md { padding: 35px 0; }
@@ -89,6 +95,12 @@ body {
     &:hover {
       background: #ffffff;
     }
+
+    @include media-breakpoint-down(md) {
+      border-bottom: 1px solid #bbbbbb;
+      padding: 0 15px 25px;
+      margin-bottom: 35px;
+    }
   }
 
   .product-thumbnail,
@@ -97,6 +109,10 @@ body {
   .product-value {
     float: left;
     padding: 10px 0;
+
+    @include media-breakpoint-down(md) {
+      height: 100px;
+    }
   }
 
   .product-thumbnail {
@@ -107,11 +123,27 @@ body {
       border: 2px solid #cccccc;
       border-radius: 10px;
     }
+
+    @include media-breakpoint-up(sm) {
+      width: 15%;
+    }
+
+    @include media-breakpoint-up(md) {
+      width: 10%;
+    }
+
+    @include media-breakpoint-up(lg) {
+      width: 18%;
+    }
   }
 
   .product-name {
     width: 35%;
     margin-left: 2%;
+
+    @include media-breakpoint-down(md) {
+      width: 80%;
+    }
   }
 
   .product-quantity {
@@ -148,10 +180,32 @@ body {
       display: block;
      } 
     }
+
+    @include media-breakpoint-down(md) {
+      width: 40%;
+      height: 45px;
+
+      i {
+        display: block;
+
+        &.fa-plus {
+          left: 15px !important;
+        }
+
+        &.fa-minus {
+          right: 15px !important;
+        }
+      }
+    }
   }
 
   .product-value {
     width: 30%;
+
+    @include media-breakpoint-down(md) {
+      width: 60%;
+      height: 45px;
+    }
   }
 }
 
@@ -197,5 +251,11 @@ body {
     display: block;
     margin-top: 15px;
     margin-bottom: 10px;
+  }
+
+  @include media-breakpoint-down(md) {
+    position: relative !important;
+    margin-top: 55px;
+    transform: none;
   }
 }
